Fixed layout issue

--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -101,7 +101,7 @@ html {
 }
 
 @utility number-label {
-    @apply text-grey-60 text-sm xl:text-lg text-pretty;
+    @apply text-grey-60 text-sm xl:text-lg text-pretty text-center lg:text-start;
 }
 
 /* #endregion */
